Revision history for Email-Sender

{{$NEXT}}

0.120001  2012-07-19 16:28:01 America/Los_Angeles
          no changes from 0.120000, just marked as stable release

0.120000  2012-05-08 20:53:43 America/New_York
          THIS IS A BIG DEAL:

          This release deprecates the scalar context behavior of:

          * Failure->recipients
          * Failure::Multi->failures
          * Failure::Multi->recipients
          * Transport::Test->deliveries
          * Transport::Failable->failure_conditions

          Until now, these methods returned a list in list context and
          an array reference in scalar context.  This still works, but
          scalar context calls will now generate a warning.  In one
          year (2013-05), they will be become fatal.

0.110005  2012-03-05 21:37:35 America/New_York
          binmode output handle to avoid line ending munging in Mbox and
          Maildir; thanks, Christian Walde!

0.110004  2012-02-21 17:47:35 America/New_York
          import the "Bcc" page from the (otherwise empty) github wiki; this
          adds some information to the QuickStart page about why Bcc support
          isn't there and why this isn't a bug

0.110003  2012-02-01 15:09:52 America/New_York
          add the add_lines_header and add_envelope_headers attributes to
          Maildir transports

0.110002  2012-01-31 17:02:35 America/New_York
          Maildir deliveries now have a ->filename method to tell you just
          where the mail was delivered

0.110001  2011-04-03 16:32:15 America/New_York

          prevent Test::MinimumVersion test from causing a requirement on T::MV
          and, thus, PPI!  Thanks for the report, Matt S. Trout!

0.110000  2011-03-17 21:40:36 America/New_York
          provide a much clearer and more fatal error when SASL authentication
          has failed because Authen::SASL or MIME::Base64 is not available

0.102370  2010-08-25 08:37:22 America/New_York